# snake

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
cmake/: DownloadFont.cmake
src/: Board.cpp  Board.hpp  Config.hpp  Game.cpp  Game.hpp  HighScore.cpp  HighScore.hpp  Renderer.cpp  Renderer.hpp  Settings.cpp  Settings.hpp  Snake.cpp  Snake.hpp  main.cpp
tests/: test_board.cpp  test_snake.cpp
